Add styles to Movie page

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Movie App"
-    />
+    <meta name="description" content="Movie App" />
+    <base href="/" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Movie App</title>
   </head>
